kubernetes-manifests/ingress-controller/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.50
  selector:
    app.kubernetes.io/name: traefik
  ports:
  - port: 80
    targetPort: 80
    name: web
  - port: 443
    targetPort: 443
    name: web-secure
  - port: 22
    targetPort: 22
    name: ssh
  - port: 8080
    targetPort: 8080
    name: dashboard
  - port: 9100
    targetPort: 9100
    name: metrics
