kubernetes-manifests/ingress-controller/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  annotations:
    external-dns.alpha.kubernetes.io/target: private-ingress.dtlp.cc
spec:
  rules:
    - host: traefik.dtlp.cc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
spec:
  entryPoints:
    - web-secure
  routes:
    - kind: Rule
      match: Host(`private-ingress.dtlp.cc`)
      services:
        - name: traefik
          kind: Service
          port: 8080
    - kind: Rule
      match: Host(`traefik.dtlp.cc`)
      services:
        - name: traefik
          kind: Service
          port: 8080
  tls: {}
